# python_template

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  tasks.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  question.md
.github/workflows/: ci.yaml  publish.yaml
python_template/: __init__.py  main.py
tests/: conftest.py  test_main.py  test_version.py
